<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frame26RowModel" type="com.solnet.app.modules.frame25.data.model.Frame26RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylewhite_3">
        <TextView android:gravity="top|center"
            android:id="@+id/txtTheThinkingMa"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:text="@{frame26RowModel.txtTheThinkingMa}"
            style="@style/txtPoppinssemibold9" tools:text="@string/msg_the_thinking_ma"/>
        <FrameLayout android:id="@+id/frame"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_4pxv" android:layout_width="wrap_content">
            <TextView android:gravity="top|start"
                android:id="@+id/txtJoeychang"
                android:layout_gravity="center|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginEnd="@dimen/_64pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:text="@{frame26RowModel.txtJoeychang}"
                style="@style/txtPoppinsmedium6_1" tools:text="@string/lbl_joeychang"/>
            <TextView android:gravity="top|end"
                android:id="@+id/txtKRocha"
                android:layout_gravity="center|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_75pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:text="@{frame26RowModel.txtKRocha}"
                style="@style/txtPoppinsmedium6_1" tools:text="@string/lbl_k_rocha"/>
            <LinearLayout android:id="@+id/linear1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/image"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_19pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="centerCrop"
                    cornerRadius="@{@dimen/_5pxh}"
                    imageRes="@{@drawable/img_pexelsmentatdgt937481_1}" tools:src="@drawable/img_pexelsmentatdgt937481_1"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtOwnedBy"
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:text="@{frame26RowModel.txtOwnedBy}"
                    style="@style/txtPoppinsmedium5" tools:text="@string/lbl_owned_by"/>
                <TextView android:gravity="top|end"
                    android:id="@+id/txtCreatedBy"
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp"
                    android:text="@{frame26RowModel.txtCreatedBy}"
                    style="@style/txtPoppinsmedium5" tools:text="@string/lbl_created_by"/>
                <ImageView android:id="@+id/image1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_19pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="centerCrop"
                    cornerRadius="@{@dimen/_5pxh}"
                    imageRes="@{@drawable/img_pexelsburst374044_1}" tools:src="@drawable/img_pexelsburst374044_1"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout android:id="@+id/frame1"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_5pxv" android:layout_width="wrap_content">
            <ImageView android:id="@+id/image2"
                android:layout_gravity="center"
                android:layout_height="@dimen/_77pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_120pxh"
                android:scaleType="centerCrop"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_karlhornfeldtpikp0uyb7i0unsplash_1}" tools:src="@drawable/img_karlhornfeldtpikp0uyb7i0unsplash_1"/>
            <ImageView android:id="@+id/image3"
                android:layout_gravity="center"
                android:layout_height="@dimen/_77pxv"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_width="@dimen/_120pxh"
                android:scaleType="centerCrop"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_karlhornfeldtpikp0uyb7i0unsplash_1}" tools:src="@drawable/img_karlhornfeldtpikp0uyb7i0unsplash_1"/>
        </FrameLayout>
        <LinearLayout android:id="@+id/linear2"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:gravity="bottom|start"
                android:id="@+id/txtPrice2"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.4" android:layout_width="0dp"
                android:text="@{frame26RowModel.txtPrice2}"
                style="@style/txtPoppinsmedium5" tools:text="@string/lbl_price2"/>
            <TextView android:gravity="bottom|start"
                android:id="@+id/txt565Sol"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_weight="1" android:layout_width="0dp"
                android:text="@{frame26RowModel.txt565Sol}"
                style="@style/txtPoppinsmedium7_2" tools:text="@string/lbl_5_65_sol"/>
            <TextView android:gravity="center" android:id="@+id/txtLbl2"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.2" android:layout_width="0dp"
                android:text="@{frame26RowModel.txtLbl2}"
                style="@style/txtPoppinsmedium5_1" tools:text="@string/lbl2"/>
            <TextView android:gravity="bottom|start"
                android:id="@+id/txt200Usdt"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_weight="1" android:layout_width="0dp"
                android:text="@{frame26RowModel.txt200Usdt}"
                style="@style/txtPoppinsmedium7_2" tools:text="@string/lbl_200_usdt"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linear3"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:gravity="center|start"
                android:id="@+id/txtPrice3"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_weight="0.3" android:layout_width="0dp"
                android:text="@{frame26RowModel.txtPrice3}"
                style="@style/txtPoppinsmedium5_1" tools:text="@string/lbl_price3"/>
            <androidx.appcompat.widget.AppCompatButton
                android:gravity="center" android:id="@+id/btnBuyNow"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_width="@dimen/_55pxh"
                android:text="@string/lbl_buy_now"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_5" tools:text="@string/lbl_buy_now"/>
        </LinearLayout>
    </LinearLayout>
</layout>
