<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frame14VM" type="com.solnet.app.modules.frame14.data.viewmodel.Frame14VM"/>
    </data>
    <FrameLayout android:id="@+id/frame"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:id="@+id/scrollView"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <FrameLayout android:id="@+id/frame1"
                android:layout_height="wrap_content" android:layout_width="match_parent">
                <View
                    android:background="@drawable/rectangle_bg_deep_purple_500_99_radius_44_5"
                    android:id="@+id/view"
                    android:layout_gravity="top|end"
                    android:layout_height="@dimen/_89pxv"
                    android:layout_marginBottom="@dimen/_723pxv"
                    android:layout_marginEnd="@dimen/_74pxh"
                    android:layout_marginStart="@dimen/_146pxh" android:layout_width="@dimen/_155pxh"/>
                <FrameLayout android:id="@+id/frame2"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" android:layout_width="match_parent">
                    <ImageView android:id="@+id/image"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_812pxv"
                        android:layout_width="match_parent"
                        android:scaleType="centerCrop"
                        imageRes="@{@drawable/img_shutterstock1914175399_1}" tools:src="@drawable/img_shutterstock1914175399_1"/>
                    <LinearLayout android:id="@+id/linear"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_27pxv"
                        android:layout_marginEnd="@dimen/_56pxh"
                        android:layout_marginStart="@dimen/_53pxh"
                        android:layout_marginTop="@dimen/_75pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <ImageView android:clickable="true"
                            android:gravity="center"
                            android:id="@+id/image1"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_87pxv"
                            android:layout_marginEnd="@dimen/_90pxh"
                            android:layout_marginStart="@dimen/_93pxh"
                            android:layout_width="@dimen/_83pxh"
                            android:scaleType="fitXY" android:src="@drawable/img_vector_22"/>
                        <TextView android:clickable="true"
                            android:gravity="center"
                            android:id="@+id/txtSolaireNetwork"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_48pxh"
                            android:layout_marginStart="@dimen/_50pxh"
                            android:layout_marginTop="@dimen/_17pxv"
                            android:layout_width="wrap_content"
                            android:text="@{frame14VM.frame14Model.txtSolaireNetwork}"
                            style="@style/txtPoppinssemibold22" tools:text="@string/lbl_solaire_network"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:gravity="center"
                            android:id="@+id/btnFrancisSnow5"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3pxh"
                            android:layout_marginTop="@dimen/_41pxv"
                            android:layout_width="match_parent"
                            android:text="@string/lbl_francis_snow5"
                            android:textAllCaps="false"
                            style="@style/btnSolidRoundedOutline_1" tools:text="@string/lbl_francis_snow5"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:gravity="center"
                            android:id="@+id/btnLbl"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="match_parent"
                            android:text="@string/lbl"
                            android:textAllCaps="false"
                            style="@style/btnSolidRoundedOutline_1" tools:text="@string/lbl"/>
                        <TextView android:gravity="center"
                            android:id="@+id/txtForgot"
                            android:layout_gravity="end"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5pxh"
                            android:layout_marginStart="@dimen/_5pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="wrap_content"
                            android:text="@{frame14VM.frame14Model.txtForgot}"
                            style="@style/txtPoppinsmedium10_2" tools:text="@string/lbl_forgot"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:gravity="center"
                            android:id="@+id/btnLogIn"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_19pxh"
                            android:layout_marginStart="@dimen/_21pxh"
                            android:layout_marginTop="@dimen/_19pxv"
                            android:layout_width="match_parent"
                            android:text="@string/lbl_log_in"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_2" tools:text="@string/lbl_log_in"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:gravity="center"
                            android:id="@+id/btnCreateAnAccou"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_19pxh"
                            android:layout_marginStart="@dimen/_21pxh"
                            android:layout_marginTop="@dimen/_55pxv"
                            android:layout_width="match_parent"
                            android:text="@string/msg_create_an_accou"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_3" tools:text="@string/msg_create_an_accou"/>
                        <FrameLayout android:gravity="center"
                            android:id="@+id/frame3"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_103pxh"
                            android:layout_marginStart="@dimen/_105pxh"
                            android:layout_marginTop="@dimen/_30pxv"
                            android:layout_width="match_parent" style="@style/groupStylewhite_A700cornerRadius">
                            <LinearLayout android:id="@+id/linear1"
                                android:layout_gravity="center"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="@dimen/_23pxv"
                                android:layout_marginStart="@dimen/_21pxh"
                                android:layout_marginTop="@dimen/_27pxv"
                                android:layout_width="match_parent" android:orientation="horizontal">
                                <View
                                    android:background="@drawable/rectangle_border_bluegray_900"
                                    android:id="@+id/view1"
                                    android:layout_gravity="center_vertical"
                                    android:layout_height="@dimen/_8pxv" android:layout_width="@dimen/_8pxh"/>
                                <View
                                    android:background="@drawable/rectangle_border_bluegray_900"
                                    android:id="@+id/view2"
                                    android:layout_gravity="center_vertical"
                                    android:layout_height="@dimen/_8pxv"
                                    android:layout_marginEnd="@dimen/_21pxh" android:layout_width="@dimen/_8pxh"/>
                            </LinearLayout>
                        </FrameLayout>
                        <ImageView android:id="@+id/image2"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="@dimen/_129pxv"
                            android:layout_marginEnd="@dimen/_5pxh"
                            android:layout_marginTop="@dimen/_17pxv"
                            android:layout_width="match_parent"
                            android:scaleType="centerCrop"
                            imageRes="@{@drawable/img_screen_shot_20210604_at_553_1}" tools:src="@drawable/img_screen_shot_20210604_at_553_1"/>
                        <TextView android:gravity="center"
                            android:id="@+id/txtAboutContact"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_77pxh"
                            android:layout_marginStart="@dimen/_79pxh"
                            android:layout_marginTop="@dimen/_16pxv"
                            android:layout_width="wrap_content"
                            android:text="@{frame14VM.frame14Model.txtAboutContact}"
                            style="@style/txtPoppinsmedium12" tools:text="@string/lbl_about_contact"/>
                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>
        </ScrollView>
    </FrameLayout>
</layout>
